minor bug fix and ui change

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/forms": "^0.5.9",
     "appwrite": "^16.0.2",
+    "axios": "^1.7.7",
     "framer-motion": "^11.11.17",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
